--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,8 +27,8 @@ header {
 .navbar-burger {
     color: #fff;
 }
-.navbar-item.title{
-    
+
+.navbar-item.title {
     padding-left: 80px;
 }
 
@@ -44,8 +44,9 @@ header {
     font-size: 2rem;
     font-weight: 800;
 }
-.button{margin-left: 50px;
 
+.button {
+    margin-left: 50px;
 }
 
 .section {
@@ -58,54 +59,10 @@ header {
     margin-top: 20px;
 }
 
-.block.home-block {
-    text-align: center;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-}
-
-.home-block__img {
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    float: right;
-}
-
 .title.is-1,
 .title.is-2 {
     margin-bottom: 10px;
     text-align: left;
-}
-
-.home-block__p {
-    text-align: left;
-    margin-bottom: 20px;
-}
-
-.home-block__icons {
-    margin-top: 20px;
-    margin-left: 100px;
-}
-
-.home-block__icons a {
-    font-size: 20px;
-    margin-right: 10px;
-    color: #333;
-}
-
-.home-block__txt {
-    margin-top: 60px;
-}
-.columns {
-  display: flex;
-  justify-content: space-between;
-}
-
-.column {
-  flex-basis: 30%;
 }
 
 
@@ -113,9 +70,10 @@ header {
     margin-top: 50px;
     padding: 20px 0;
     background-color: #333;
-    
 }
-.is-4,.is-5{
+
+.is-4,
+.is-5 {
     color: black;
 }
 
@@ -135,13 +93,6 @@ header {
 .footer-pages a:hover {
     text-decoration: underline;
 }
-.columns{
-    display: flex;
-}
-.column{
-    padding-left: 30px;
-}
-
 
 @media (min-width: 480px) and (max-width: 768px) {
     #navbarMenu .navbar-start {
@@ -151,73 +102,26 @@ header {
     }
 
     #navbarMenu .navbar-item {
-        margin-bottom: 8px; /* Adjust the spacing between items as needed */
+        margin-bottom: 8px;
     }
 
-    /* Optional: Adjust the button style for smaller screens */
     #button_contact {
-        margin-top: 10px; /* Adjust the spacing from the last navbar item */
-        width: 100%; /* Make the button full width */
+        margin-top: 10px;
+        width: 100%;
     }
-    
+
     .columns {
-      flex-direction: column;
+        flex-direction: column;
     }
-  
+
     .column {
-      flex-basis: auto;
+        flex-basis: auto;
     }
-    .navbar-item.title{
+
+    .navbar-item.title {
         padding-left: 300px;
     }
-    .block.home-block {
-        text-align: center;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 5px;
-    }
 
-    .home-block__img {
-        width: 100%;
-        height: 400px;
-        border-radius: 20px;
-        margin: 20px;
-        margin-left: 10px;
-        margin-bottom: 30px;
-    }
-
-    .block--Home {
-        clear: both;
-        padding: 20px;
-    }
-
-    #block--Home_p {
-        display: block;
-        float: left;
-        max-width: 400px;
-    }
-
-    .block--Home_button {
-        margin-left: 20px; /* Adjust the margin as needed */
-        display: block;
-    }
-
-    .block--Home--icons {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    .block--Home--icons a {
-        font-size: 20px;
-        margin-right: 10px;
-        color: #333;
-    }
-
-    #block--service_elem--h2 {
-        padding-top: 50px;
-        text-align: center;
-    }
 }
 
 @media (min-width: 769px) {
@@ -239,116 +143,66 @@ header {
         background-color: var(--color2);
         padding: 0px;
     }
-    .navbar-menu{
+
+    .navbar-menu {
         margin-left: 30%;
     }
-    .navbar-start{
+
+    .navbar-start {
         display: flex;
         gap: 50px;
     }
-    
+
     #button_contact {
         margin-left: 20%;
         margin-top: 10px;
     }
 
-    .section{
+    .section {
         margin-top: 100px;
         width: 100%;
         padding-left: 30px;
     }
 
-    .block--Home_img {
-        width: 40%;
-        height: 500px;
-        float: right;
-        border-radius: 20px;
-        margin-left: 30px;
-        margin-top: 100px;
-    }
 
-    .block--Home_button {
-        background-color: aqua;
-        color: white;
-        padding: 10px 25px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        margin-top: 100px;
-        border: none;
-        border-radius: 20px;
-    }
-
-    .block--Home {
-        margin: 0px;
-    }
-
-    .is-1, is-2{
+    .is-1,
+    is-2 {
         margin-left: 0px;
         margin-top: 30px;
     }
 
-    #block--Home_p {
-        margin-top: 30px;
-    }
-    .home-block__button{
-        margin-right: 50px;
-    }
 
-    .block--Home--txt {
-        clear: both;
-        margin-left: 60%;
-        margin-top: -20px;
-    }
 
+    .image{
+        width: 400px;
+        height: 300px;
+        float: right;
+    }
     footer {
         width: 100%;
         text-align: center;
         margin-top: 100px;
     }
-}
-
 
 .columns {
     display: flex;
-    justify-content: space-between;
-  }
-  
-  .column {
+    justify-content: space-evenly;
+}
+
+.column {
     flex-basis: 30%;
     margin-bottom: 20px;
-  }
-  
-
-  @media screen and (max-width: 768px) {
-    .columns {
-      flex-direction: column;
-    }
-  
-    .column {
-      flex-basis: auto; 
-    }
-  
-  
-  /* Default styles */
-.block--Experience {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px; /* Add some space between experience blocks */
-  }
-  
-  #block--list {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .block--Experience-img {
-    max-width: 100%;
-    height: auto;
-    align-self: flex-end; /* Align the image to the end (right) of the flex container */
-  }
-  
 }
-  
+}
+
+@media screen and (max-width: 768px) {
+    .columns {
+        flex-direction: column;
+    }
+
+    .column {
+        flex-basis: auto;
+    }
+
+
+}
